# hexapoda

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: action.rs  app.rs  arguments.rs  buffer.rs  config.rs  cursor.rs  custom_greys.rs  edit_action.rs  main.rs  popup.rs  select_grey.rs  window_size.rs
src/app/: actions.rs  mod.rs  widget.rs
src/buffer/: actions.rs  mod.rs  widget.rs
src/buffer/widget/: address.rs  character_panel.rs  extra_statuses.rs  hex.rs  status_line.rs
src/config/: default.rs
src/cursor/: actions.rs
