[package]
name = "hexapoda"
version = "0.1.0"
description = "a colorful modal hex editor"
repository = "https://github.com/simonomi/hexapoda"
keywords = ["cli", "tui", "hex", "tool", "editor"]
categories = ["command-line-utilities"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["serde"] }
itertools = "0.14.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
